[project]
name = "smart-opendtu-limiter"
version = "0.1.0"
description = "Dynamic power limiter for Hoymiles HMS inverters with OpenDTU"
requires-python = ">=3.10"
dependencies = ["requests>=2.28"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
]
ignore = [
    "SIM108",  # prefer if/else for clarity over ternary
]

[tool.ruff.lint.isort]
known-first-party = ["smart_opendtu_limiter"]
